--- a/public/phpmetrics/all.html
+++ b/public/phpmetrics/all.html
@@ -49,7 +49,7 @@
 <div class="page">
     <div class="content content-first">
         <div class="report-details">
-            Created at 2023-11-24 19:34:10        , with PHPMetrics v2.8.2 (<a href="https://twitter.com/Halleck45">Jean-François Lépine</a>).
+            Created at 2023-11-24 20:13:38        , with PHPMetrics v2.8.2 (<a href="https://twitter.com/Halleck45">Jean-François Lépine</a>).
         </div>
 
         
@@ -259,7 +259,7 @@
                                                             <td class="js-sort-number">22</td>
                                                             <td class="js-sort-number">22</td>
                                                             <td class="js-sort-number">App\Card\</td>
-                                                            <td class="js-sort-number">0.27</td>
+                                                            <td class="js-sort-number">0.26</td>
                                                             <td class="js-sort-number">2</td>
                                                             <td class="js-sort-number">0</td>
                                                             <td class="js-sort-number">0</td>
@@ -514,7 +514,7 @@
                                                             <td class="js-sort-number">12</td>
                                                             <td class="js-sort-number">12</td>
                                                             <td class="js-sort-number">App\Dice\</td>
-                                                            <td class="js-sort-number">0.22</td>
+                                                            <td class="js-sort-number">0.21</td>
                                                             <td class="js-sort-number">3</td>
                                                             <td class="js-sort-number">0</td>
                                                             <td class="js-sort-number">0</td>
@@ -626,52 +626,52 @@
                                                             <td class="js-sort-number">App\Controller\JsonController</td>
                                                             <td class="js-sort-number"></td>
                                                             <td class="js-sort-number"></td>
-                                                            <td class="js-sort-number">10</td>
-                                                            <td class="js-sort-number">10</td>
-                                                            <td class="js-sort-number">10</td>
-                                                            <td class="js-sort-number">1</td>
+                                                            <td class="js-sort-number">4</td>
+                                                            <td class="js-sort-number">4</td>
+                                                            <td class="js-sort-number">4</td>
+                                                            <td class="js-sort-number">0</td>
+                                                            <td class="js-sort-number">4</td>
+                                                            <td class="js-sort-number">0</td>
+                                                            <td class="js-sort-number">0</td>
+                                                            <td class="js-sort-number">6</td>
+                                                            <td class="js-sort-number">3</td>
+                                                            <td class="js-sort-number">2</td>
                                                             <td class="js-sort-number">9</td>
-                                                            <td class="js-sort-number">0</td>
-                                                            <td class="js-sort-number">0</td>
-                                                            <td class="js-sort-number">21</td>
-                                                            <td class="js-sort-number">12</td>
-                                                            <td class="js-sort-number">5</td>
-                                                            <td class="js-sort-number">28</td>
                                                             <td class="js-sort-number">1</td>
                                                             <td class="js-sort-number">0</td>
-                                                            <td class="js-sort-number">7</td>
-                                                            <td class="js-sort-number">337</td>
-                                                            <td class="js-sort-number">88</td>
-                                                            <td class="js-sort-number">2176.83</td>
-                                                            <td class="js-sort-number">20.29</td>
-                                                            <td class="js-sort-number">44166.7</td>
-                                                            <td class="js-sort-number">0.05</td>
-                                                            <td class="js-sort-number">0.73</td>
-                                                            <td class="js-sort-number">2454</td>
-                                                            <td class="js-sort-number">107.29</td>
-                                                            <td class="js-sort-number">80</td>
-                                                            <td class="js-sort-number">257</td>
-                                                            <td class="js-sort-number">12</td>
-                                                            <td class="js-sort-number">76</td>
-                                                            <td class="js-sort-number">29</td>
-                                                            <td class="js-sort-number">150</td>
-                                                            <td class="js-sort-number">121</td>
-                                                            <td class="js-sort-number">61.07</td>
-                                                            <td class="js-sort-number">29.58</td>
-                                                            <td class="js-sort-number">31.49</td>
-                                                            <td class="js-sort-number">1.03</td>
+                                                            <td class="js-sort-number">3</td>
+                                                            <td class="js-sort-number">131</td>
+                                                            <td class="js-sort-number">50</td>
+                                                            <td class="js-sort-number">739.35</td>
+                                                            <td class="js-sort-number">7.02</td>
+                                                            <td class="js-sort-number">5192.22</td>
+                                                            <td class="js-sort-number">0.14</td>
+                                                            <td class="js-sort-number">0.25</td>
+                                                            <td class="js-sort-number">288</td>
+                                                            <td class="js-sort-number">105.28</td>
+                                                            <td class="js-sort-number">28</td>
+                                                            <td class="js-sort-number">103</td>
+                                                            <td class="js-sort-number">6</td>
+                                                            <td class="js-sort-number">44</td>
+                                                            <td class="js-sort-number">4</td>
+                                                            <td class="js-sort-number">48</td>
+                                                            <td class="js-sort-number">44</td>
+                                                            <td class="js-sort-number">65.28</td>
+                                                            <td class="js-sort-number">43.66</td>
+                                                            <td class="js-sort-number">21.62</td>
+                                                            <td class="js-sort-number">0.29</td>
+                                                            <td class="js-sort-number">144</td>
+                                                            <td class="js-sort-number">0.48</td>
+                                                            <td class="js-sort-number">144.48</td>
                                                             <td class="js-sort-number">576</td>
-                                                            <td class="js-sort-number">0.58</td>
-                                                            <td class="js-sort-number">576.58</td>
-                                                            <td class="js-sort-number">5760</td>
-                                                            <td class="js-sort-number">5.76</td>
-                                                            <td class="js-sort-number">5765.76</td>
+                                                            <td class="js-sort-number">1.92</td>
+                                                            <td class="js-sort-number">577.92</td>
                                                             <td class="js-sort-number">App\Controller\</td>
                                                             <td class="js-sort-number">0.03</td>
                                                             <td class="js-sort-number">0</td>
-                                                            <td class="js-sort-number">8</td>
+                                                            <td class="js-sort-number">5</td>
                                                             <td class="js-sort-number">1</td>
-                                                            <td class="js-sort-number">Blob / God object,Probably bugged,</td>
+                                                            <td class="js-sort-number"></td>
                                                     </tr>
                                             <tr>
                                                             <td class="js-sort-number">App\Controller\BookController</td>
@@ -774,6 +774,57 @@
                                                             <td class="js-sort-number">7</td>
                                                             <td class="js-sort-number">1</td>
                                                             <td class="js-sort-number">Too complex method code,Probably bugged,</td>
+                                                    </tr>
+                                            <tr>
+                                                            <td class="js-sort-number">App\Controller\CardGameApiController</td>
+                                                            <td class="js-sort-number"></td>
+                                                            <td class="js-sort-number"></td>
+                                                            <td class="js-sort-number">6</td>
+                                                            <td class="js-sort-number">6</td>
+                                                            <td class="js-sort-number">6</td>
+                                                            <td class="js-sort-number">1</td>
+                                                            <td class="js-sort-number">5</td>
+                                                            <td class="js-sort-number">0</td>
+                                                            <td class="js-sort-number">0</td>
+                                                            <td class="js-sort-number">15</td>
+                                                            <td class="js-sort-number">10</td>
+                                                            <td class="js-sort-number">5</td>
+                                                            <td class="js-sort-number">20</td>
+                                                            <td class="js-sort-number">1</td>
+                                                            <td class="js-sort-number">0</td>
+                                                            <td class="js-sort-number">4</td>
+                                                            <td class="js-sort-number">206</td>
+                                                            <td class="js-sort-number">46</td>
+                                                            <td class="js-sort-number">1137.85</td>
+                                                            <td class="js-sort-number">18.73</td>
+                                                            <td class="js-sort-number">21311.69</td>
+                                                            <td class="js-sort-number">0.05</td>
+                                                            <td class="js-sort-number">0.38</td>
+                                                            <td class="js-sort-number">1184</td>
+                                                            <td class="js-sort-number">60.75</td>
+                                                            <td class="js-sort-number">52</td>
+                                                            <td class="js-sort-number">154</td>
+                                                            <td class="js-sort-number">9</td>
+                                                            <td class="js-sort-number">37</td>
+                                                            <td class="js-sort-number">20</td>
+                                                            <td class="js-sort-number">101</td>
+                                                            <td class="js-sort-number">81</td>
+                                                            <td class="js-sort-number">67.43</td>
+                                                            <td class="js-sort-number">35.62</td>
+                                                            <td class="js-sort-number">31.8</td>
+                                                            <td class="js-sort-number">0.89</td>
+                                                            <td class="js-sort-number">144</td>
+                                                            <td class="js-sort-number">0.73</td>
+                                                            <td class="js-sort-number">144.73</td>
+                                                            <td class="js-sort-number">864</td>
+                                                            <td class="js-sort-number">4.38</td>
+                                                            <td class="js-sort-number">868.38</td>
+                                                            <td class="js-sort-number">App\Controller\</td>
+                                                            <td class="js-sort-number">0.03</td>
+                                                            <td class="js-sort-number">0</td>
+                                                            <td class="js-sort-number">5</td>
+                                                            <td class="js-sort-number">1</td>
+                                                            <td class="js-sort-number">Probably bugged,</td>
                                                     </tr>
                                             <tr>
                                                             <td class="js-sort-number">App\Controller\DiceGameController</td>
