--- a/public/phpmetrics/loc.html
+++ b/public/phpmetrics/loc.html
@@ -49,7 +49,7 @@
 <div class="page">
     <div class="content content-first">
         <div class="report-details">
-            Created at 2023-11-24 19:34:10        , with PHPMetrics v2.8.2 (<a href="https://twitter.com/Halleck45">Jean-François Lépine</a>).
+            Created at 2023-11-24 20:13:38        , with PHPMetrics v2.8.2 (<a href="https://twitter.com/Halleck45">Jean-François Lépine</a>).
         </div>
 
         
@@ -314,24 +314,24 @@
                                     <tr>
                         <td><span class="path">App\Controller\JsonController</span></td>
                                                     <td>
-                                <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0.71);">
-                                121                                </span>
+                                <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0.26);">
+                                44                                </span>
                             </td>
                                                     <td>
-                                <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0.62);">
-                                29                                </span>
+                                <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0.09);">
+                                4                                </span>
                             </td>
                                                     <td>
-                                <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0.8);">
-                                2176.83                                </span>
+                                <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0.27);">
+                                739.35                                </span>
                             </td>
                                                     <td>
-                                <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0.68);">
-                                107.29                                </span>
+                                <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0.67);">
+                                105.28                                </span>
                             </td>
                                                     <td>
-                                <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0.7);">
-                                31.49                                </span>
+                                <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0.48);">
+                                21.62                                </span>
                             </td>
                                             </tr>
                                     <tr>
@@ -378,6 +378,29 @@
                                                     <td>
                                 <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0.74);">
                                 33.07                                </span>
+                            </td>
+                                            </tr>
+                                    <tr>
+                        <td><span class="path">App\Controller\CardGameApiController</span></td>
+                                                    <td>
+                                <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0.48);">
+                                81                                </span>
+                            </td>
+                                                    <td>
+                                <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0.43);">
+                                20                                </span>
+                            </td>
+                                                    <td>
+                                <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0.42);">
+                                1137.85                                </span>
+                            </td>
+                                                    <td>
+                                <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0.39);">
+                                60.75                                </span>
+                            </td>
+                                                    <td>
+                                <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0.71);">
+                                31.8                                </span>
                             </td>
                                             </tr>
                                     <tr>
@@ -507,7 +530,7 @@
                             <path d="M0 0h24v24H0z" fill="none">
                             <path d="M20 8h-2.81c-.45-.78-1.07-1.45-1.82-1.96L17 4.41 15.59 3l-2.17 2.17C12.96 5.06 12.49 5 12 5c-.49 0-.96.06-1.41.17L8.41 3 7 4.41l1.62 1.63C7.88 6.55 7.26 7.22 6.81 8H4v2h2.09c-.05.33-.09.66-.09 1v1H4v2h2v1c0 .34.04.67.09 1H4v2h2.81c1.04 1.79 2.97 3 5.19 3s4.15-1.21 5.19-3H20v-2h-2.09c.05-.33.09-.66.09-1v-1h2v-2h-2v-1c0-.34-.04-.67-.09-1H20V8zm-6 8h-4v-2h4v2zm0-4h-4v-2h4v2z">
                         </svg>
-                        Violations (10)
+                        Violations (9)
                     </a>
                 </li>
                                     <li>
@@ -689,7 +712,7 @@
 
     data = [
     {
-        "lloc": 34,
+        "lloc": 35,
         "percentile": 50
     },
     {
@@ -697,7 +720,7 @@
         "percentile": 55
     },
     {
-        "lloc": 45,
+        "lloc": 44,
         "percentile": 60
     },
     {
@@ -717,19 +740,19 @@
         "percentile": 80
     },
     {
-        "lloc": 87,
+        "lloc": 51,
         "percentile": 85
     },
     {
-        "lloc": 87,
+        "lloc": 81,
         "percentile": 90
     },
     {
-        "lloc": 107,
+        "lloc": 87,
         "percentile": 95
     },
     {
-        "lloc": 121,
+        "lloc": 107,
         "percentile": 100
     }
 ];
