--- a/public/phpmetrics/oop.html
+++ b/public/phpmetrics/oop.html
@@ -49,7 +49,7 @@
 <div class="page">
     <div class="content content-first">
         <div class="report-details">
-            Created at 2023-11-24 19:34:10        , with PHPMetrics v2.8.2 (<a href="https://twitter.com/Halleck45">Jean-François Lépine</a>).
+            Created at 2023-11-24 20:13:38        , with PHPMetrics v2.8.2 (<a href="https://twitter.com/Halleck45">Jean-François Lépine</a>).
         </div>
 
         
@@ -58,12 +58,12 @@
     <div class="row">
         <div class="column">
             <div class="bloc bloc-number">
-                <div class="label">classes <span title="Last value: 17" class="progress progress-neutral progress-eq">0 <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
-    <path d="M22 12l-4-4v3H3v2h15v3z"/>
+                <div class="label">classes <span title="Last value: 17" class="progress progress-neutral progress-gt">+1 <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+    <path d="M16 6l2.29 2.29-4.88 4.88-4-4L2 16.59 3.41 18l6-6 4 4 6.3-6.29L22 12V6z"/>
     <path d="M0 0h24v24H0z" fill="none"/>
 </svg></span></div>
                 <div class="number">
-                    17                    <small> (100 %)</small>
+                    18                    <small> (100 %)</small>
                 </div>
             </div>
         </div>
@@ -79,17 +79,17 @@
         </div>
         <div class="column">
             <div class="bloc bloc-number">
-                <div class="label">average LCOM <span title="Last value: 1.59" class="progress progress-neutral progress-eq">0 <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
-    <path d="M22 12l-4-4v3H3v2h15v3z"/>
+                <div class="label">average LCOM <span title="Last value: 1.59" class="progress progress-good progress-lt">-0.09 <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+    <path d="M16 18l2.29-2.29-4.88-4.88-4 4L2 7.41 3.41 6l6 6 4-4 6.3 6.29L22 12v6z"/>
     <path d="M0 0h24v24H0z" fill="none"/>
 </svg></span></div>
-                <div class="number">1.59</div>
+                <div class="number">1.5</div>
             </div>
         </div>
         <div class="column">
             <div class="bloc bloc-number">
                 <div class="label">logical lines of code by class</div>
-                <div class="number">51</div>
+                <div class="number">48</div>
             </div>
         </div>
         <div class="column">
@@ -119,7 +119,7 @@
                                             <tr>
                             <td><span class="path">App\Repository\BookRepository</span></td>
                                                             <td>
-                                    <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0.29);">
+                                    <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0.5);">
                                     2                                    </span>
                                 </td>
                                                             <td>
@@ -146,7 +146,7 @@
                                             <tr>
                             <td><span class="path">App\Form\BookType</span></td>
                                                             <td>
-                                    <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0.29);">
+                                    <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0.5);">
                                     2                                    </span>
                                 </td>
                                                             <td>
@@ -173,7 +173,7 @@
                                             <tr>
                             <td><span class="path">App\Card\Card</span></td>
                                                             <td>
-                                    <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0.14);">
+                                    <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0.25);">
                                     1                                    </span>
                                 </td>
                                                             <td>
@@ -200,7 +200,7 @@
                                             <tr>
                             <td><span class="path">App\Card\DeckOfCards</span></td>
                                                             <td>
-                                    <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0.14);">
+                                    <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0.25);">
                                     1                                    </span>
                                 </td>
                                                             <td>
@@ -227,7 +227,7 @@
                                             <tr>
                             <td><span class="path">App\Card\CardHand</span></td>
                                                             <td>
-                                    <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0.14);">
+                                    <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0.25);">
                                     1                                    </span>
                                 </td>
                                                             <td>
@@ -281,7 +281,7 @@
                                             <tr>
                             <td><span class="path">App\Dice\DiceHand</span></td>
                                                             <td>
-                                    <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0.14);">
+                                    <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0.25);">
                                     1                                    </span>
                                 </td>
                                                             <td>
@@ -308,7 +308,7 @@
                                             <tr>
                             <td><span class="path">App\Dice\Dice</span></td>
                                                             <td>
-                                    <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0.29);">
+                                    <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0.5);">
                                     2                                    </span>
                                 </td>
                                                             <td>
@@ -335,7 +335,7 @@
                                             <tr>
                             <td><span class="path">App\Dice\DiceGraphic</span></td>
                                                             <td>
-                                    <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0.29);">
+                                    <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0.5);">
                                     2                                    </span>
                                 </td>
                                                             <td>
@@ -362,7 +362,7 @@
                                             <tr>
                             <td><span class="path">App\Controller\CardGameController</span></td>
                                                             <td>
-                                    <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0.29);">
+                                    <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0.5);">
                                     2                                    </span>
                                 </td>
                                                             <td>
@@ -389,34 +389,34 @@
                                             <tr>
                             <td><span class="path">App\Controller\JsonController</span></td>
                                                             <td>
-                                    <span class="badge"  style="background-color: hsla(203, 82%, 76%, 1);">
-                                    7                                    </span>
+                                    <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0.75);">
+                                    3                                    </span>
                                 </td>
                                                             <td>
-                                    <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0.8);">
-                                    2176.83                                    </span>
+                                    <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0.27);">
+                                    739.35                                    </span>
                                 </td>
                                                             <td>
-                                    <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0.39);">
-                                    12                                    </span>
+                                    <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0.07);">
+                                    3                                    </span>
                                 </td>
                                                             <td>
-                                    <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0.42);">
-                                    5                                    </span>
+                                    <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0.17);">
+                                    2                                    </span>
                                 </td>
                                                             <td>
-                                    <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0.73);">
-                                    0.73                                    </span>
+                                    <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0.25);">
+                                    0.25                                    </span>
                                 </td>
                                                             <td>
-                                    <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0.59);">
-                                    20.29                                    </span>
+                                    <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0.2);">
+                                    7.02                                    </span>
                                 </td>
                                                     </tr>
                                             <tr>
                             <td><span class="path">App\Controller\BookController</span></td>
                                                             <td>
-                                    <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0.14);">
+                                    <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0.25);">
                                     1                                    </span>
                                 </td>
                                                             <td>
@@ -443,7 +443,7 @@
                                             <tr>
                             <td><span class="path">App\Controller\Game21Controller</span></td>
                                                             <td>
-                                    <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0.14);">
+                                    <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0.25);">
                                     1                                    </span>
                                 </td>
                                                             <td>
@@ -468,9 +468,36 @@
                                 </td>
                                                     </tr>
                                             <tr>
+                            <td><span class="path">App\Controller\CardGameApiController</span></td>
+                                                            <td>
+                                    <span class="badge"  style="background-color: hsla(203, 82%, 76%, 1);">
+                                    4                                    </span>
+                                </td>
+                                                            <td>
+                                    <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0.42);">
+                                    1137.85                                    </span>
+                                </td>
+                                                            <td>
+                                    <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0.32);">
+                                    10                                    </span>
+                                </td>
+                                                            <td>
+                                    <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0.42);">
+                                    5                                    </span>
+                                </td>
+                                                            <td>
+                                    <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0.38);">
+                                    0.38                                    </span>
+                                </td>
+                                                            <td>
+                                    <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0.54);">
+                                    18.73                                    </span>
+                                </td>
+                                                    </tr>
+                                            <tr>
                             <td><span class="path">App\Controller\DiceGameController</span></td>
                                                             <td>
-                                    <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0.29);">
+                                    <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0.5);">
                                     2                                    </span>
                                 </td>
                                                             <td>
@@ -497,7 +524,7 @@
                                             <tr>
                             <td><span class="path">App\Controller\LibraryController</span></td>
                                                             <td>
-                                    <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0.14);">
+                                    <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0.25);">
                                     1                                    </span>
                                 </td>
                                                             <td>
@@ -524,7 +551,7 @@
                                             <tr>
                             <td><span class="path">App\Controller\MainController</span></td>
                                                             <td>
-                                    <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0.14);">
+                                    <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0.25);">
                                     1                                    </span>
                                 </td>
                                                             <td>
@@ -610,7 +637,7 @@
                             <path d="M0 0h24v24H0z" fill="none">
                             <path d="M20 8h-2.81c-.45-.78-1.07-1.45-1.82-1.96L17 4.41 15.59 3l-2.17 2.17C12.96 5.06 12.49 5 12 5c-.49 0-.96.06-1.41.17L8.41 3 7 4.41l1.62 1.63C7.88 6.55 7.26 7.22 6.81 8H4v2h2.09c-.05.33-.09.66-.09 1v1H4v2h2v1c0 .34.04.67.09 1H4v2h2.81c1.04 1.79 2.97 3 5.19 3s4.15-1.21 5.19-3H20v-2h-2.09c.05-.33.09-.66.09-1v-1h2v-2h-2v-1c0-.34-.04-.67-.09-1H20V8zm-6 8h-4v-2h4v2zm0-4h-4v-2h4v2z">
                         </svg>
-                        Violations (10)
+                        Violations (9)
                     </a>
                 </li>
                                     <li>
